# fastapi-auth

./: .gitignore  README.md  pyproject.toml
fastapi_auth/: __init__.py  dependencies.py  detail.py  errors.py  fastapi_auth.py  jwt.py  logging.py  main.py  oauth_messages.py  repo.py  types.py  user.py  validator.py
fastapi_auth/backend/: abc.py
fastapi_auth/backend/abc/: authorization.py  cache.py  captcha.py  db.py  email.py  jwt.py  oauth.py  password.py  transport.py  validator.py
fastapi_auth/backend/auth/: __init__.py  base.py  jwt.py
fastapi_auth/backend/authorization/: default.py
fastapi_auth/backend/cache/: __init__.py  base.py  redis.py
fastapi_auth/backend/captcha/: __init__.py  base.py  recaptcha.py
fastapi_auth/backend/db/: __init__.py  base.py  mongo.py  postgres.py
fastapi_auth/backend/db/postgres_sql/: oauth.sql  role.sql  user.sql
fastapi_auth/backend/email/: __init__.py  aiosmtplib.py  base.py
fastapi_auth/backend/jwt/: default.py
fastapi_auth/backend/oauth/: __init__.py  base.py  facebook.py  google.py  vk.py
fastapi_auth/backend/password/: passlib.py
fastapi_auth/backend/transport/: cookie.py
fastapi_auth/backend/validator/: __init__.py  base.py  default.py  en_ru.py  standard.py
fastapi_auth/core/: config.py  email.py  jwt.py  logger.py  user.py
fastapi_auth/db/: __init__.py
fastapi_auth/db/backend/: __init__.py  mongodb.py  redis.py
fastapi_auth/exceptions/: __init__.py  social.py
fastapi_auth/models/: admin.py  auth.py  common.py  email.py  me.py  oauth.py  password.py  social.py  token.py  user.py  users.py  verify.py
fastapi_auth/repositories/: __init__.py  users.py
fastapi_auth/resources/: error_messages.py  social_messages.py
fastapi_auth/routers/: __init__.py  admin.py  auth.py  email.py  me.py  oauth.py  password.py  search.py  social.py  token.py  users.py  verify.py
fastapi_auth/services/: __init__.py  admin.py  auth.py  base.py  email.py  me.py  oauth.py  password.py  search.py  social.py  token.py  verify.py
fastapi_auth/utils/: captcha.py  password.py  string.py
scripts/: check  format  start  test
tests/: backend_mocks.py  conftest.py  test_core_email.py  test_core_jwt.py  test_core_user.py  test_routers_admin.py  test_routers_auth.py  test_routers_password.py  test_routers_search.py  test_routers_social.py  test_services_auth.py  test_services_password.py
tests/mocks/: __init__.py  authorization.py  cache.py  captcha.py  db.py  email.py  jwt.py  oauth.py  password.py  transport.py  validator.py
tests/routers/: test_routers_admin.py  test_routers_auth.py  test_routers_email.py  test_routers_me.py  test_routers_oauth.py  test_routers_password.py  test_routers_token.py  test_routers_verify.py
tests/services/: test_services_admin.py  test_services_auth.py  test_services_email.py  test_services_me.py  test_services_oauth.py  test_services_password.py  test_services_verify.py
