[tool.poetry]
name = "fastapi-auth"
version = "0.2.3"
description = ""
authors = ["NoSoundLeR <you@example.com>"]
repository = "https://github.com/NoSoundLeR/fastapi-auth"
packages = [
  { include = "fastapi_auth" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
PyJWT = "^1.7.1"
cryptography = "^3.1.1"
httpx = "^0.16.1"
aioredis = "^1.3.1"
passlib = "^1.7.4"
itsdangerous = "^1.1.0"
bcrypt = "^3.2.0"
orjson = "^3.4.0"
email-validator = "^1.1.1"
motor = {version = "^2.3.0"}
aiosmtplib = "^1.1.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"
isort = "^5.6.4"
autoflake = "^1.4"
black = {version = "*", allow-prereleases = true}
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"
mypy = "^0.790"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
