[tool.poetry]
name = "fastapi-auth"
version = "0.4.0"
description = ""
authors = ["pegov"]
repository = "https://github.com/pegov/fastapi-auth"
packages = [
  { include = "fastapi_auth" }
]

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
fastapi = ">=0.65.2"
PyJWT = ">=2.1.0"
cryptography = ">=3.4.8"
passlib = { version = ">=1.7", extras = ["bcrypt"] }
email-validator = ">=1.1.0"
itsdangerous = ">=1.1.0, <2.0.0"
httpx = ">=0.18.2"
orjson = ">=3.4.0"
aiosmtplib = { version = ">=1.1.6", optional = true }
motor = { version = ">=2.3.0", optional = true }
aioredis = { version = ">=2.0.0", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"
isort = "^5.9.3"
autoflake = "^1.4"
black = "^21.7b0"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
mypy = "^0.910"
docker = "^5.0.0"

[tool.poetry.extras]
motor = ["motor"]
aiosmtplib = ["aiosmtplib"]
aioredis = ["aioredis"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
