[tool.poetry]
name = "fastapi-auth"
version = "0.9.0"
description = ""
authors = ["pegov"]
repository = "https://github.com/pegov/fastapi-auth"
packages = [
  { include = "fastapi_auth" }
]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
fastapi = ">=0.65.2"
PyJWT = ">=2.1.0"
cryptography = ">=3.4.8"
passlib = { version = ">=1.7", extras = ["bcrypt"] }
email-validator = ">=1.1.0"
itsdangerous = ">=1.1.0, <2.0.0"
httpx = ">=0.18.2"
orjson = ">=3.4.0"
aiosmtplib = { version = ">=1.1.6", optional = true }
aioredis = { version = ">=2.0.0", optional = true }
asyncpg = { version = "^0.26.0", optional = true}
sqlsl = {version = "^0.1.0", optional = true}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"
isort = "^5.9.3"
autoflake = "^1.4"
black = "^22.1.0"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
mypy = "^0.910"

[tool.poetry.extras]
aiosmtplib = ["aiosmtplib"]
aioredis = ["aioredis"]
asyncpg = ["asyncpg", "sqlsl"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
